--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,27 +9,30 @@ Authors@R:
              role = c("cre", "aut"),
              email = "liz.roten@metc.state.mn.us"))
 Description: Visualize Regional Parks and ACS demographics.
+Date: 2020-06-16
 License: MIT + file LICENSE
-Imports: 
-    config (>= 0.3),
-    golem (>= 0.2.1),
-    shiny (>= 1.4.0.2),
-    leaflet (>= 2.0.3),
-    dplyr (>= 1.0.0),
-    sf (>= 0.9.3),
-    data.table (>= 1.12.8),
-    magrittr (>= 1.5),
-    councilR (>= 0.1.0),
-    htmltools (>= 0.4.0),
-    processx,
-    attempt,
-    DT,
-    glue
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.0
-Roxygen: list(markdown = TRUE)
 Depends: 
     R (>= 2.10)
+Imports: 
+    attempt (>= 0.3.1),
+    config (>= 0.3),
+    councilR (>= 0.1.0),
+    data.table (>= 1.12.8),
+    dplyr (>= 1.0.0),
+    DT (>= 0.13),
+    glue (>= 1.4.1),
+    golem (>= 0.2.1),
+    htmltools (>= 0.4.0),
+    leaflet (>= 2.0.3),
+    magrittr (>= 1.5),
+    processx (>= 3.4.2),
+    sf (>= 0.9.3),
+    shiny (>= 1.4.0.2)
 Suggests: 
-    testthat
+    testthat (>= 2.3.2)
+Remotes:
+    Metropolitan-Council/councilR
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.0
