--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     magrittr (>= 1.5),
     processx (>= 3.4.2),
     sf (>= 0.9.3),
-    shiny (>= 1.4.0.2)
+    shiny (>= 1.4.0.2),
+    pkgload
 Suggests: 
     testthat (>= 2.3.2)
 Remotes:
