--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,7 @@ Imports:
     attempt (>= 0.3.1),
     config (>= 0.3),
     councilR (>= 0.1.0),
-    data.table (>= 1.12.8),
     dplyr (>= 1.0.0),
-    DT (>= 0.13),
     glue (>= 1.4.1),
     golem (>= 0.2.1),
     htmltools (>= 0.4.0),
@@ -28,9 +26,10 @@ Imports:
     processx (>= 3.4.2),
     sf (>= 0.9.3),
     shiny (>= 1.4.0.2),
-    pkgload
+    pkgload (>= 1.1.0)
 Suggests: 
-    testthat (>= 2.3.2)
+    testthat (>= 2.3.2),
+    data.table (>= 1.12.8),
 Remotes:
     Metropolitan-Council/councilR
 Encoding: UTF-8
