use leaflet.extras draw plug-in

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(run_app)
 import(councilR)
 import(leaflet)
+import(leaflet.extras)
 import(shiny)
 importFrom(config,get)
 importFrom(golem,activate_js)
