--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     processx (>= 3.4.2),
     sf (>= 0.9.3),
     shiny (>= 1.4.0.2),
-    pkgload (>= 1.1.0)
+    pkgload (>= 1.1.0),
+    leaflet.extras (>= 1.0.0)
 Suggests: 
     testthat (>= 2.3.2),
     data.table (>= 1.12.8),
