--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -56,6 +56,11 @@ jobs:
           sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
           sudo -s eval "$sysreqs"
 
+      - name: Install units for Mac
+        if: runner.os == 'macOS'
+        run: |
+          brew install udunits
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
