--- a/.github/workflows/R-CMD-check-deploy.yaml
+++ b/.github/workflows/R-CMD-check-deploy.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         config: 
-          - {os: ubuntu-latest, r: 'release', container: rocker/geospatial:latest}
+          - {os: ubuntu-latest, r: 'release', container: rocker/geospatial}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
