--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,10 @@ Imports:
 Suggests: 
     testthat (>= 2.3.2),
     data.table (>= 1.12.8),
+    tigris (>= 0.9.4),
+    fs (>= 1.4.1),
+    readxl (>= 1.3.1),
+    janitor (>= 2.0.1)
 Remotes:
     Metropolitan-Council/councilR
 Encoding: UTF-8
