--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,19 +22,19 @@ Imports:
     golem (>= 0.2.1),
     htmltools (>= 0.4.0),
     leaflet (>= 2.0.3),
+    leaflet.extras (>= 1.0.0),
     magrittr (>= 1.5),
+    pkgload (>= 1.1.0),
     processx (>= 3.4.2),
     sf (>= 0.9.3),
-    shiny (>= 1.4.0.2),
-    pkgload (>= 1.1.0),
-    leaflet.extras (>= 1.0.0)
+    shiny (>= 1.4.0.2)
 Suggests: 
-    testthat (>= 2.3.2),
     data.table (>= 1.12.8),
-    tigris (>= 0.9.4),
     fs (>= 1.4.1),
+    janitor (>= 2.0.1),
     readxl (>= 1.3.1),
-    janitor (>= 2.0.1)
+    testthat (>= 2.3.2),
+    tigris (>= 0.9.4)
 Remotes:
     Metropolitan-Council/councilR
 Encoding: UTF-8
