increment version and date; remove unneccessary dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(run_app)
 import(councilR)
 import(leaflet)
 import(leaflet.extras)
+import(sf)
 import(shiny)
 importFrom(config,get)
 importFrom(golem,activate_js)
