--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,18 @@
 export("%>%")
 export(run_app)
 import(councilR)
+import(cowplot)
+import(dplyr)
+import(forcats)
+import(ggplot2)
 import(leaflet)
 import(leaflet.extras)
+import(plotly)
 import(sf)
 import(shiny)
+import(stringr)
+import(tibble)
+import(tidyr)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
