--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Imports:
     magrittr (>= 1.5),
     sf (>= 0.9.3),
     shiny (>= 1.4.0.2),
-    htmltools
+    htmltools,
+    cowplot (>= 1.1.0),
+    tibble (>= 3.0.4)
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
