--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,12 @@ Imports:
     shiny (>= 1.4.0.2),
     htmltools,
     cowplot (>= 1.1.0),
-    tibble (>= 3.0.4)
+    tibble (>= 3.0.4),
+    ggplot2,
+    forcats,
+    stringr,
+    plotly,
+    tidyr
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
