--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ import(stringr)
 import(tibble)
 import(tidyr)
 importFrom(config,get)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,ggplot)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
