waiter in popmap

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     stringr,
     plotly,
     tidyr,
-    DT
+    DT,
+    waiter
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
