--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(shiny)
 import(stringr)
 import(tibble)
 import(tidyr)
+import(waiter)
 importFrom(config,get)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,ggplot)
