--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,21 +20,21 @@ Depends:
 Imports: 
     config (>= 0.3),
     councilR (>= 0.1.0),
+    cowplot (>= 1.1.0),
     dplyr (>= 1.0.0),
+    DT (>= 0.16),
+    forcats (>= 0.5.0),
     golem (>= 0.2.1),
+    htmltools (>= 0.5.0),
     leaflet (>= 2.0.3),
     leaflet.extras (>= 1.0.0),
     magrittr (>= 1.5),
     sf (>= 0.9.3),
     shiny (>= 1.4.0.2),
-    htmltools,
-    cowplot (>= 1.1.0),
+    stringr (>= 1.4.0),
     tibble (>= 3.0.4),
-    forcats,
-    stringr,
-    tidyr,
-    DT,
-    waiter
+    tidyr (>= 1.1.2),
+    waiter (>= 0.1.3)
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
