--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,6 +2,7 @@ on:
   pull_request:
     branches:
       - master
+      - v1.0.0
       
 
 name: R-CMD-check
@@ -11,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.config.os }}
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         config: 
           - {os: windows-latest, r: 'release'}
