--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,15 +24,17 @@ Imports:
     dplyr (>= 1.0.0),
     DT (>= 0.16),
     forcats (>= 0.5.0),
+    ggplot2 (>= 3.3.3),
     golem (>= 0.2.1),
     htmltools (>= 0.5.0),
     leaflet (>= 2.0.3),
     magrittr (>= 1.5),
+    scales (>= 1.1.1),
     sf (>= 0.9.3),
     shiny (>= 1.4.0.2),
     stringr (>= 1.4.0),
     tibble (>= 3.0.4),
-    tidyr (>= 1.1.2),
+    tidyr (>= 1.1.2)
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
