--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     shiny (>= 1.4.0.2),
     stringr (>= 1.4.0),
     tibble (>= 3.0.4),
-    tidyr (>= 1.1.2)
+    tidyr (>= 1.1.2),
+    utils
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
