--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(run_app)
 import(councilR)
 import(cowplot)
 import(dplyr)
+import(ggforestplot)
 import(ggplot2)
 import(leaflet)
 import(sf)
