--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ Suggests:
     testthat (>= 2.3.2),
     tigris (>= 0.9.4)
 Remotes:
-    Metropolitan-Council/councilR
+    Metropolitan-Council/councilR,
     NightingaleHealth/ggforestplot
 Encoding: UTF-8
 LazyData: true
