--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     dplyr (>= 1.0.0),
     DT (>= 0.16),
     forcats (>= 0.5.0),
+    ggforestplot (>= 0.1.0),
     ggplot2 (>= 3.3.2),
     golem (>= 0.2.1),
     htmltools (>= 0.5.0),
@@ -35,8 +36,7 @@ Imports:
     stringr (>= 1.4.0),
     tibble (>= 3.0.4),
     tidyr (>= 1.1.2),
-    utils,
-    ggforestplot
+    utils
 Suggests: 
     data.table (>= 1.12.8),
     fs (>= 1.4.1),
