--- a/.github/workflows/R-CMD-check-deploy-draft.yaml
+++ b/.github/workflows/R-CMD-check-deploy-draft.yaml
@@ -60,7 +60,8 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
-        shell: Rscript {0}
+          remotes::install_cran("rsconnect")
+          shell: Rscript {0}
 
       - name: Check
         env:
