add polyline measurement options

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Imports:
     tibble (>= 3.0.4),
     tidyr (>= 1.1.2),
     shinyhelper (>= 0.3.2),
+    leaflet.extras(>= 1.0.0),
     utils
 Suggests: 
     data.table (>= 1.12.8),
