--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ import(dplyr)
 import(ggforestplot)
 import(ggplot2)
 import(leaflet)
+import(leaflet.extras)
 import(sf)
 import(shiny)
 import(shinyhelper)
