add clunky waiter

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     tidyr (>= 1.1.2),
     shinyhelper (>= 0.3.2),
     leaflet.extras(>= 1.0.0),
+    waiter(>= 0.2.0),
     utils
 Suggests: 
     data.table (>= 1.12.8),
