--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(shinyhelper)
 import(stringr)
 import(tibble)
 import(tidyr)
+import(waiter)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
