--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     shinyhelper (>= 0.3.2),
     leaflet.extras(>= 1.0.0),
     waiter(>= 0.2.0),
+    tidyverse(>= 1.3.0),
     utils
 Suggests: 
     data.table (>= 1.12.8),
