--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
     leaflet.extras (>= 1.0.0),
     magrittr (>= 1.5),
     processx (>= 3.4.5),
+    rmarkdown (>= 2.10),
     scales (>= 1.1.1),
     sf (>= 0.9.3),
     shiny (>= 1.4.0.2),
